--- a/www/templates/mylearning/games.html
+++ b/www/templates/mylearning/games.html
@@ -6,7 +6,7 @@
         <div class="card cards" ng-repeat="gameItem in gameItems">
             <div class="game-title">{{gameItem.title}}</div>
             <div class="game-image"><img src="img/u48.png"></div>
-            <div class="game_description">{{gameItem.description}}</div>
+            <div class="game-description">{{gameItem.description}}</div>
             <div style="text-align:center;">
                 <button class="game-play-button">Play Now</button>
             </div>
