--- a/www/templates/resource/whitepaper.html
+++ b/www/templates/resource/whitepaper.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Whitepaper">
+<ion-view view-title="Whitepaper" class="whitepaper-wrapper">
     <ion-nav-title>
         <img src="img/cortex_logo.png" class="header-corter-logo">
     </ion-nav-title>
