--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,4 +1,4 @@
- <ion-tabs class="tabs-icon-top tabs-color-active-positive bottom-tab">
+<ion-tabs class="tabs-icon-top tabs-color-active-positive bottom-tab">
     <!-- Discover Tab -->
     <ion-tab title="Discover" icon-off="all-icon-bottom-menu_discover" icon-on="all-icon-bottom-menu_discover" href="" ng-click="redirect('discover')">
         <ion-nav-view name="tab-discover@tab"></ion-nav-view>
@@ -12,7 +12,7 @@
         <ion-nav-view name="tab-techtips@tab"></ion-nav-view>
     </ion-tab>
     <!-- App Library Tab -->
-    <ion-tab title="Apps" icon-off="all-icon-bottom-menu_apps" icon-on="all-icon-bottom-menu_apps" href="" ng-click="redirect('applibrary')">
+    <ion-tab title="Toolkit" icon-off="all-icon-bottom-menu_apps" icon-on="all-icon-bottom-menu_apps" href="" ng-click="redirect('applibrary')">
         <ion-nav-view name="tab-applibrary@tab"></ion-nav-view>
     </ion-tab>
     <!-- Resources Tab -->
