--- a/www/templates/welcome/login.html
+++ b/www/templates/welcome/login.html
@@ -1,4 +1,4 @@
-<ion-view hide-nav-bar="true" ng-controller="loginCtrl" class="login-wrapper">
+<ion-view hide-nav-bar="true" class="login-wrapper">
     <ion-content>
         <div class='full-size'>
             <div class='logintop'>
