--- a/scss/discover.scss
+++ b/scss/discover.scss
@@ -1,3 +1,22 @@
+.platform-ios {
+    &.platform-cordova {
+        .scroll-content {
+            &.discover-wrapper {
+                top: 130px;
+            }
+        }
+        .recent-search-wrapper {
+            top: 125px;
+        }
+    }
+}
+
+.scroll-content {
+    &.discover-wrapper {
+        top: 123px;
+    }
+}
+
 .discover-wrapper {
     .top-header {
         margin-top: 5px;
@@ -23,7 +42,7 @@
             text-transform: capitalize;
             font-size: 13px;
             color: $color-light;
-            font-family: 'light';
+            font-weight: 300;
             line-height: 17px;
         }
         .scte-isbe-cortex-logo {
@@ -54,13 +73,20 @@
         }
     }
     .resources-wrapper {
-        background: $color-dull;
-        margin: 15px 0;
-        padding: 10px 0 10px 15px;
-        .header {
+        background-color: $color-cream;
+        margin: 0 0 15px 0;
+        padding: 10px 0px 0px 10px;
+        position: relative;
+        .heading {
             @extend .common-main-title;
         }
+        .see-all {
+            @extend .common-see-all;
+            top: 17px !important;
+            right: 10px !important;
+        }
         .app-box {
+            background-color: $color-light;
             width: 100%;
             overflow-x: scroll;
             margin-top: 10px;
@@ -74,7 +100,6 @@
             p {
                 width: 80px;
                 word-wrap: break-word;
-                font-family: inherit;
                 font-size: 10pt;
                 color: $color-dark;
                 text-align: center;
@@ -88,64 +113,71 @@
         }
     }
     .events {
+        .card {
+            margin: 0px 0px !important;
+        }
         position: relative;
-        background-color: $color-dull;
-        padding: 5px 5px 20px 10px;
+        background-color: $color-cream;
+        padding: 0px 10px 10px 10px;
         .heading {
             @extend .common-main-title;
         }
         .see-all {
-            position: absolute;
-            top: 12px;
-            right: 10px;
-            color: $color-link;
+            @extend .common-see-all;
+            top: -1px !important;
+            right: 10px !important;
         }
-        .eventindiv {
-            // margin: 7px 20px;
-            padding: 0;
-            .date-box {
-                position: relative;
-                width: 50px;
-                .date {
-                    position: absolute;
-                    top: 13px;
-                    left: 17px;
-                    font-family: 'bold';
-                }
-                .month {
-                    text-transform: uppercase;
-                    position: absolute;
-                    top: 35px;
-                    left: 0px;
-                    font-size: 10px;
-                    color: $color-light;
-                    text-align: center;
-                    font-family: 'bold';
-                    width: 100%;
-                    div {
-                        position: absolute;
-                        left: 0px;
-                    }
-                }
-                img {
-                    width: 50px;
-                }
+        .event-box {
+            @extend .common-event-list;
+        }
+    }
+    .searchinput {
+        background-color: $color-dull;
+        .searchbox {
+            height: 35px;
+        }
+    }
+    .rss-feeds {
+        position: relative;
+        background-color: $color-cream;
+        font-weight: 700;
+        &.discover-rss {
+            padding: 0px 10px 10px 10px !important;
+        }
+        .heading {
+            @extend .common-main-title;
+        }
+        .see-all {
+            @extend .common-see-all;
+            top: -2px !important;
+            right: 10px !important;
+        }
+        .list {
+            img {
+                max-height: 50px;
+                border-radius: 0;
             }
-            .text-box {
-                padding: 0;
-                padding-left: 35px;
-                .row-top {
-                    a {
-                        color: $color-primary;
-                        font-family: 'bold';
-                    }
-                }
-                .row-bottom {
-                    font-family: 'light';
-                }
+            h2 {
+                color: $color-primary;
+                font-weight: 700;
             }
-            .bg {
-                background-image: url(./svg/img_calendar.svg);
+            p {
+                overflow: initial;
+                white-space: initial;
+                font-weight: 500;
+            }
+            .rss-description p:not(:first-child) {
+                display: none;
+            }
+            .rss-description {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                -webkit-line-clamp: 3;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+            }
+            i {
+                color: $color-link;
             }
         }
     }
@@ -170,10 +202,12 @@
         }
     }
     .mic-icn {
-        width: 15px;
+        font-size: 25px;
+        color: $color-primary;
     }
     .search-icn {
-        width: 18px;
+        font-size: 15px;
+        margin-top: 5px;
     }
 }
 
@@ -229,7 +263,7 @@
 
 .sort-slider {
     .sort-title {
-        font-family: 'bold';
+        font-weight: 700;
         font-size: 14px;
         color: $color-grey;
         padding: 8px 0 0 17px;
@@ -241,7 +275,7 @@
         margin-top: 10px;
     }
     .filter-title {
-        font-family: 'bold';
+        font-weight: 700;
         font-size: 14px;
         color: $color-grey;
         padding: 8px 0 0 17px;
@@ -249,7 +283,7 @@
     .content-type-box {
         .title {
             margin-left: 17px;
-            font-family: 'bold';
+            font-weight: 700;
         }
     }
     .published-box {
@@ -263,7 +297,7 @@
         }
         .title {
             margin-left: 17px;
-            font-family: 'bold';
+            font-weight: 700;
         }
         .date-box {
             .title {
@@ -323,11 +357,39 @@
     .format-box {
         .title {
             margin-left: 17px;
-            font-family: 'bold';
+            font-weight: 700;
         }
     }
     .filter-footer {
         margin: 15px 0px 25px 0px;
         text-align: center;
+    }
+}
+
+@media (min-width: 680px) {
+    .sort-slider.modal,
+    .filter-slider.modal {
+        width: 50% !important;
+        top: 0 !important;
+        bottom: 0 !important;
+        right: 0 !important;
+        left: 50% !important;
+    }
+    .modal-wrapper .modal .bar-header:not(.bar-subheader) > * {
+        margin-top: 20px;
+    }
+    .modal-wrapper .modal .bar-header:not(.bar-subheader) {
+        height: 64px;
+    }
+    .modal-wrapper .modal .has-header,
+    .modal-wrapper .modal .bar-subheader {
+        top: 64px;
+    }
+    .recent-search-wrapper.modal {
+        width: 100% !important;
+        /* top: 100px !important; */
+        bottom: 0 !important;
+        right: 0 !important;
+        left: 0 !important;
     }
 }
