--- a/www/templates/discover/discover.html
+++ b/www/templates/discover/discover.html
@@ -1,15 +1,15 @@
-<ion-view view-title="Discover">
+<ion-view view-title="Discover" ng-init="init()">
     <ion-nav-title class="discover-wrapper">
         <div class="top-header">
             <div class="left">
                 <table>
                     <tr>
-                        <!-- <td><img src="img/SCTE-ISBE_Cortex_logos.png" class="scte-isbe-cortex-logo"></td> -->
                         <td><img ng-src="{{logoURL}}" class="scte-isbe-cortex-logo"></td>
+                        <!-- <td><img src="img/SCTE-ISBE_Cortex_logos.png" class="scte-isbe-cortex-logo"></td> -->
                     </tr>
                 </table>
             </div>
-            <div class="right">
+            <div class="right" ng-click="fetchIonicDeployInfo()">
                 <div><img src="img/prof-pic_default.png" class="profile-pic-icn"></div>
                 <div class="user-name">
                     <div>Hello</div>
@@ -21,20 +21,23 @@
     </ion-nav-title>
     <ion-header-bar class="bar-subheader search-box-wrapper" style="position: relative">
         <label class="item-input-wrapper">
-            <img src="img/icon_textbox-search.png" class="search-icn">
+            <i class="all-icon-icon_search_white search-icn"></i>
             <input type="search" placeholder="Enter keyword here" ng-model="query" ng-focus="showRecentSearches()" ng-blur="hideRecentSearches()" ng-change="searchChange()" ng-keyup="$event.keyCode == 13 && searchResults(query)">
         </label>
-        <button class="button button-clear button-stable" ng-click="voiceRecog()" style="    position: absolute; top: 16px; right: 19px" ng-if="query == ''"><img src="img/icon_textbox-mic.png" class="mic-icn"></button>
-        <button class="button button-clear button-stable" ng-click="clearSearchField()" style="    position: absolute; top: 16px; right: 19px" ng-if="query != ''"><i class="ion-close-circled mic-icn"></i></button>
+        <button class="button button-clear button-stable" ng-click="voiceRecog()" style="    position: absolute; top: 16px; right: 19px" ng-show="query == ''">
+            <i class="all-icon-icon_mic mic-icn"></i>
+        </button>
+        <button class="button button-clear button-stable" ng-click="clearSearchField()" style="    position: absolute; top: 16px; right: 19px" ng-show="query != ''"><i class="ion-close-circled mic-icn"></i></button>
     </ion-header-bar>
     <ion-content class="discover-wrapper">
-        <ion-slide-box on-slide-changed="slideHasChanged($index)" active-slide="activeIndex" ng-init="activeIndex = 0" class="slide-wrapper">
+        <ion-slide-box on-slide-changed="slideHasChanged($index)" active-slide="activeIndex" ng-init="activeIndex = 0" class="slide-wrapper" does-continue="true">
             <ion-slide ng-repeat="item in staticContent.announcements" ng-if="item.template == 'imagewithlink' && withinDates(item.datestart,item.dateend)">
                 <div class="slide-image"><img ng-src="{{item.fullwidthimageurl}}" ng-click="openPromo(item.url)" /></div>
             </ion-slide>
         </ion-slide-box>
         <div class="resources-wrapper">
-            <h5 class="header">Featured Resources</h5>
+            <h5 class="heading">Toolkit</h5>
+            <a class="see-all" href="#/tab/applibrary">See All &gt;</a>
             <div class="app-box">
                 <table>
                     <tr>
@@ -50,34 +53,49 @@
                 </table>
             </div>
         </div>
-        <!--  <div class="ad-wrapper">
-            <img src="img/u44.png">
-        </div> -->
         <div class="events" ng-controller="DiscoverEventCtrl">
             <div>
                 <h5 class="heading">Events</h5>
                 <a class="see-all" ng-click="myEventsList()">See All &gt;</a>
-                <div class="card eventindiv" ng-repeat="event in eventType |limitTo:3">
-                    <div class="row" ng-click="eventDetail(event.eventId,eventTabName,event.webDescription)">
-                        <div class="col-30">
-                            <div class="date-box">
-                                <img src="svg/img_calendar.svg" />
-                                <div class="date">{{event.formattedBeginDate | date: 'dd'}}</div>
-                                <div class="month">{{event.formattedBeginDate | date: 'MMM'}} '{{event.formattedBeginDate | date: 'yy'}}</div>
+                <div class="event-box">
+                    <div class="card eventindiv" ng-repeat="event in eventType |limitTo:3">
+                        <div class="row" ng-click="eventDetail(event.eventId,eventTabName,event.webDescription)">
+                            <div class="col-30">
+                                <div class="date-box">
+                                    <img src="svg/img_calendar.svg" />
+                                    <div class="date">{{event.formattedBeginDate | date: 'dd'}}</div>
+                                    <div class="month">{{event.formattedBeginDate | date: 'MMM'}} '{{event.formattedBeginDate | date: 'yy'}}</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-70">
-                            <div class="text-box">
-                                <div class="row-top"><a href="">{{event.title}}</a></div>
-                                <div class="row-bottom"><b>Location: </b> {{event.address1}} {{event.address2}} {{event.address3}} {{event.city}} {{event.stateProvince}} {{event.postal}}
-                                    <br>
-                                    <b>When: </b>{{event.formattedBeginDate | date: 'shortTime'}}
+                            <div class="col-70">
+                                <div class="text-box">
+                                    <div class="row-top"><a href="">{{event.title}}</a></div>
+                                    <div class="row-bottom"><b>Location: </b> {{event.address1}} {{event.address2}} {{event.address3}} {{event.city}} {{event.stateProvince}} {{event.postal}}
+                                        <br>
+                                        <b>When: </b>{{event.formattedBeginDate | date: 'shortTime'}}
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="rss-feeds discover-rss">
+            <h5 class="heading">RSS Feed</h5>
+            <!-- <a class="see-all">See All &gt;</a> -->
+            <!-- <div ng-bind-html="http://www.cablelabs.com/feed"></div> -->
+            <a class="see-all" ng-click="rssFeedDetailScreen()">See All &gt;</a>
+            <ion-list class="list">
+                <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="rssFeed in rssFeeds | limitTo:3" ng-click="openPage(rssFeed.link)">
+                    <img ng-src="img/u214.png" />
+                    <h2>{{rssFeed.title}}</h2>
+                    <!-- <p>{{rssFeed.publishedDate}}</p> -->
+                    <p class="rss-description" ng-bind-html="rssFeed.description"></p>
+                    <i class="icon ion-chevron-right icon-accessory"></i>
+                </ion-item>
+            </ion-list>
+        </div>
         </div>
     </ion-content>
 </ion-view>
